Выполнение ТЗ №15 часть 2: Реализована функциональность бронирований